--- a/src/main/resources/templates/views/pet/lista.html
+++ b/src/main/resources/templates/views/pet/lista.html
@@ -8,70 +8,79 @@
 </head>
 
 <body>
-    <div th:insert="~{fragments/navigation :: navigation}"></div>
-    <main>
-        <div class="d-flex flex-column flex-shrink-0 p-3">
-            <div>
-                <span class=" banner-text">Buscar mascota</span>
-            </div>
-            <form th:object="${search}" th:action="@{/pets/filter}">
-                <input type="hidden" th:field="*{typePet}">
-                <label for="color" class="form-label">Color</label>
-                <select id="color" class="form-select mb-2" th:field="*{colorId}">
-                    <option selected value="0">Selecciona</option>
-                    <option th:each="itemColor: ${listColors}" th:value="${itemColor.id}" th:text="${itemColor.name}"></option>
-                </select>
-                <label for="size" class="form-label">Tamaño</label>
-                <select id="size" class="form-select mb-2" th:field="*{sizeId}">
-                    <option selected value="0">Selecciona</option>
-                    <option th:each="itemSize: ${listSizes}" th:value="${itemSize.id}" th:text="${itemSize.name}"></option>
-                </select>
-                <label for="personality" class="form-label">Carácter</label>
-                <select id="personality" class="form-select mb-2" th:field="*{personalityId}">
-                    <option selected value="0">Selecciona</option>
-                    <option th:each="itemPersonality: ${listPersonalities}" th:value="${itemPersonality.id}" th:text="${itemPersonality.name}"></option>
-                </select>
-                <button type="submit" class="btn mt-3" style="background-color:  #cafcfb; color: black;">Filtrar</button>
+<div th:insert="~{fragments/navigation :: navigation}"></div>
 
-            </form>
-            <hr>
-            <div>
-                <a th:href="@{/pets/adopt/{type}(type=${typePet})}" style="color: black"><strong>Borrar filtros</strong></a>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row" th:if="${listPets.numberOfElements != 0}">
-                <div th:each="item : ${listPets}" class="col-lg-4 mb-4">
-                    <div class="card">
-                        <img th:src="@{/uploads/{img}(img=${item.image})}" alt="" class="card-img-top" style="max-height: 200px;">
-                        <div class="row">
-                            <div class="col">
+<div>ㅤ</div>
 
-                            </div>
-                            <div class="col"><span class="badge bg-info text-dark text-capitalize">[[${item.type}]]</span></div>
+    <div class="container mt-6">
+        <div class="row">
+            <div class="col-12 col-sm-2 my-fixed-item">
+                    <div>
+                        <span class="banner-text text-center"><i class="bi bi-search"></i>ㅤBuscar</span>
+                    </div>
+                    <form th:object="${search}" th:action="@{/pets/filter}">
+                        <input type="hidden" th:field="*{typePet}">
+                        <label for="color" class="form-label">Color</label>
+                        <select id="color" class="form-select mb-2" th:field="*{colorId}">
+                            <option selected value="0">Selecciona</option>
+                            <option th:each="itemColor: ${listColors}" th:value="${itemColor.id}" th:text="${itemColor.name}"></option>
+                        </select>
+                        <label for="size" class="form-label">Tamaño</label>
+                        <select id="size" class="form-select mb-2" th:field="*{sizeId}">
+                            <option selected value="0">Selecciona</option>
+                            <option th:each="itemSize: ${listSizes}" th:value="${itemSize.id}" th:text="${itemSize.name}"></option>
+                        </select>
+                        <label for="personality" class="form-label">Carácter</label>
+                        <select id="personality" class="form-select mb-2" th:field="*{personalityId}">
+                            <option selected value="0">Selecciona</option>
+                            <option th:each="itemPersonality: ${listPersonalities}" th:value="${itemPersonality.id}" th:text="${itemPersonality.name}"></option>
+                        </select>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-blue text-white mt-3"><b>Filtrar</b></button>
                         </div>
-                        <div class="card-body">
-                            <h5 class="card-title">[[${item.name}]]</h5>
-                            <p class="text-capitalize"><strong>Sexo:</strong>&nbsp;[[${item.sex}]]</p>
-                            <p class="text-capitalize"><strong>Edad:</strong>&nbsp;[[${item.age}]]</p>
-                            <p class="text-capitalize"><strong>Tamaño:</strong>&nbsp;[[${item.size.name}]]</p>
-                            <hr>
-                            <i class="fa-solid fa-calendar-days"></i>
-                            <div>
-                                <a class="btn btn-warning" th:href="@{/adoptions/detail/{id}(id = ${item.id})}">Detalle</a>
+                    </form>
+                    <hr>
+                    <div class="text-center">
+                        <a th:href="@{/pets/adopt/{type}(type=${typePet})}" style="color: black"><strong>Borrar filtros</strong></a>
+                    </div>
+            </div>
+
+            <div class="col-12 col-sm-10" th:if="${listPets.numberOfElements != 0}">
+                <div class="row">
+                    <div th:each="item : ${listPets}" class="col-12 col-sm-6 col-md-4">
+                        <div class="card mt-3">
+                            <img th:src="@{/uploads/{img}(img=${item.image})}" alt="" class="card-img-top" style="height: 200px !important;">
+                            <div class="row">
+                                <h5 class="card-title text-center">[[${item.name}]]</h5>
+                                <hr>
+                                <div class="col-12 text-center">
+                                    <span class="badge btn-blueC text-dark text-capitalize">[[${item.type}]]</span>
+                                    <span class="badge btn-blueC text-dark text-capitalize">[[${item.sex}]]</span>
+                                    <span class="badge btn-blueC text-dark text-capitalize">[[${item.availableAdoption ? 'En Adopacion' : 'No disponible'}]]</span>
+                                </div>
+                                <hr class="mt-3">
                             </div>
-                                <div class="feeds">
-                                    <div class="feed">
-                                        <div class="actions">
-                                            <div class="heart"></div>
+                            <div class="card-body" style="margin-top: -10px">
+                                <h6 class="text-capitalize text-center"><strong>Edad de mascota:</strong>&nbsp;[[${item.age}]]</h6>
+                                <h6 class="text-capitalize text-center"><strong>Tamaño:</strong>&nbsp;[[${item.size.name}]]</h6>
+                                <hr>
+                                <i class="fa-solid fa-calendar-days"></i>
+                                <div>
+                                    <a class="btn btn-blue text-white" th:href="@{/adoptions/detail/{id}(id = ${item.id})}"><b>Detalle</b></a>
+                                    <div class="feeds">
+                                        <div class="feed">
+                                            <div class="actions">
+                                                <div class="heart"></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            <!--                            <p>Añadido hace 2 días</p>-->
+                                <!--                            <p>Añadido hace 2 días</p>-->
+                            </div>
                         </div>
-
                     </div>
                 </div>
+                <div>ㅤ</div>
                 <div th:insert="~{fragments/paginator :: paginator}">
                 </div>
             </div>
@@ -80,8 +89,9 @@
                 <h2>No existen mascotas disponibles</h2>
             </div>
         </div>
-    </main>
-    <div th:replace="~{fragments/footer :: footer}"></div>
+    </div>
+
+<div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 
 </html>
